--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,12 @@ buildscript {
         kotlin_version = "1.4.32"
         preference_version = "1.1.1"
 
-        room_version = "2.2.5"
+        room_version = "2.3.0"
 
         retrofit_version = "2.9.0"
         logging_interceptor_version = '4.9.0'
 
-        kotlin_coroutines_version = "1.3.9"
+        kotlin_coroutines_version = "1.4.2"
         lifecycle_version = "2.2.0"
 
         koin_version = "2.1.6"
@@ -18,13 +18,22 @@ buildscript {
 
         navigation_version = "2.3.1"
 
+        leakcanary_version = "2.6"
+
+        sql_cipher = "4.4.2"
+        sql_lite = "2.1.0"
+
+        lottie_version = "3.4.1"
+
+        shimmer_version = "0.5.0"
+
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.1"
+        classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
