--- a/favorite/build.gradle
+++ b/favorite/build.gradle
@@ -42,5 +42,6 @@ dependencies {
     implementation project(":core")
     implementation project(":app")
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "com.airbnb.android:lottie:$lottie_version"
 
 }
