--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -6,10 +6,12 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "androidx.preference:preference-ktx:$preference_version"
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakcanary_version"
+
 
     //Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
@@ -23,4 +25,6 @@ dependencies {
 
     //Glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
+
+    implementation "com.facebook.shimmer:shimmer:$shimmer_version"
 }
